--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,20 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       
-      - name: Update npm to the last
+      - name: Update npm v7 to the last
         if: ${{ matrix.node-version == 15 }}
-        run: npm install npm@7 -g
+        run: |
+          npm install npm@7 -g
+          npm -v
+
+      - name: Update npm v8 to the last
+        if: ${{ matrix.node-version == 16 }}
+        run: |
+          npm install npm@8 -g
+          npm -v
 
       - name: Install Dependencies
         run: |
-          npm -v
           npm init --yes
           npm init -w pkg-a --yes
           npm install react-scripts -w pkg-a
